--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weatherapp",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://thewisesailor.github.io/ReactWeather",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -9,6 +10,7 @@
     "axios": "^1.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "gh-pages": "^6.0.0",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.3",
